--- a/index.html
+++ b/index.html
@@ -373,28 +373,28 @@
           <p class="social-media-title">Social media</p>
           <ul class="social-media-footer">
             <li class="social-media-item">
-              <a href="#" class="social-media-link">
+              <a href="#" class="social-med-link">
                 <svg class="social-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
-              <a href="#" class="social-media-link">
+              <a href="#" class="social-med-link">
                 <svg class="social-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
-              <a href="#" class="social-media-link">
+              <a href="#" class="social-med-link">
                 <svg class="social-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
-              <a href="#" class="social-media-link">
+              <a href="#" class="social-med-link">
                 <svg class="social-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
@@ -409,7 +409,7 @@
       <div class="modal">
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/modal.svg#icon-close-black"></use>
+            <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
       </div>
