--- a/portfolio.html
+++ b/portfolio.html
@@ -237,15 +237,15 @@
       <p class="social-media-title">Social media</p>
       <ul class="social-media-footer">
         <li class="social-media-item">
-          <a href="#" class="social-media-link">
-            <svg class="social-med-icon" width="24" height="24">
+          <a href="#" class="social-med-link">
+            <svg class="social-media-icon" width="24" height="24">
               <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="social-media-item">
-          <a href="#" class="social-media-link">
-            <svg class="social-med-icon" width="24" height="24">
+          <a href="#" class="social-med-link">
+            <svg class="social-media-icon" width="24" height="24">
               <use href="./images/icons.svg#icon-twitter"></use>
             </svg>
           </a>
