--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
             <li class="header-link-item">
               <a
                 href="./portfolio.html"
-                class="link-menu link carend"
+                class="link-menu link"
                 aria-label="Studio"
                 
                 >Portfolio</a
